# yandex_lyceum_repo

./: .gitignore  README.md  pyproject.toml  test.py
src/backend/: core.py  main.py
src/backend/api/: __init__.py
src/backend/api/jobs/: __init__.py  jobs_create.py  jobs_retrieve.py
src/backend/api/users/: users_resource.py
src/backend/db/data/: __init__.py  base.py  db_session.py  departments.py  jobs.py  users.py
src/backend/forms/: auth.py  department.py  job.py
src/backend/misc/: abort.py  router_register.py
src/backend/routes/: __init__.py  main_page.py
src/backend/routes/auth/: __init__.py  login.py  register.py
src/backend/routes/departments/: __init__.py  departments_create.py  departments_delete.py  departments_retrieve.py  departments_update.py
src/backend/routes/job_categories/: __init__.py  job_categories_create.py  job_categories_delete.py  job_categories_update.py
src/backend/routes/jobs/: __init__.py  jobs_create.py  jobs_delete.py  jobs_update.py
src/backend/static/css/: style.css
src/backend/templates/: 404.html  base.html  departments_create.html  departments_retrieve.html  index.html  job_categories_create.html  jobs_create.html  occupations_list.html
