[build-system]
requires = ["setuptools==78.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "YLMS-Study"
requires-python = ">=3.13"
version = "1.0.0"
description = "-"
dependencies = [
    "Flask==3.1.0",
    "Flask-WTF==1.2.2",
    "Flask-Login==0.6.3",
    "SQLAlchemy==2.0.40",
    "sqlalchemy-serializer==1.4",
]

[tool.ruff.lint]
ignore = ["F821"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
lint = ['ruff==0.11.2']

[project.scripts]
backend = "backend.main:main"

